--- a/DomsCommands/src/plugin.yml
+++ b/DomsCommands/src/plugin.yml
@@ -98,7 +98,7 @@ commands:
       permission: DomsCommands.pardon
    kick:
       description: Kicks a player from the server with an optional reason.
-      aliases: [boot, kick]
+      aliases: [boot]
       usage: /<command> [player] (reason)
       permission: DomsCommands.kick
    away:
@@ -123,9 +123,9 @@ commands:
       permission: DomsCommands.gamemode
    tell:
       description: Change yours or another players gamemode.
-      aliases: [gm, creative, survival, adventure, gms, gmc, gma, gamemodecreative, gamemodec, gamemodesurvival, gamemodes, gamemodeadventure, gamemodea, togglegamemode, togglegm]
-      usage: /<command> (player) (gamemode)
-      permission: DomsCommands.gamemode
+      aliases: [w, whisper, msg, message, talk, pm, pmessage, privatemessage, m]
+      usage: /<command> [player] [message]
+      permission: DomsCommands.tell
 permissions:
   # TODO: FINISH ALL THE * PERM NODES.
    DomsCommands.*:
@@ -202,3 +202,5 @@ permissions:
      description: Allows access to use colors in nicknames.
    DomsCommands.gamemode:
      description: Allows access to the gamemode command.
+   DomsCommands.tell:
+     description: Allows access to the tell command.
